package adapter.examples.vectorRaster;

import java.util.ArrayList;

public class VectorObject extends ArrayList<Line> {
}
