@startuml

title __VECTORRASTER's Class Diagram__\n

  namespace adapter.examples.vectorRaster {
    class adapter.examples.vectorRaster.AdapterDemo {
        {static} - vectorObjects : List<VectorObject>
        {static} + drawPoint()
        {static} + main()
        {static} - draw()
    }
  }
  

  namespace adapter.examples.vectorRaster {
    class adapter.examples.vectorRaster.Line {
        + Line()
    }
  }
  

  namespace adapter.examples.vectorRaster {
    class adapter.examples.vectorRaster.LineToPointAdapter {
        {static} - count : int
        + LineToPointAdapter()
    }
  }
  

  namespace adapter.examples.vectorRaster {
    class adapter.examples.vectorRaster.Point {
        + x : int
        + y : int
        + Point()
        + toString()
    }
  }
  

  namespace adapter.examples.vectorRaster {
    class adapter.examples.vectorRaster.VectorObject {
    }
  }
  

  namespace adapter.examples.vectorRaster {
    class adapter.examples.vectorRaster.VectorRectangle {
        + VectorRectangle()
    }
  }
  

  adapter.examples.vectorRaster.Line o-- adapter.examples.vectorRaster.Point : end
  adapter.examples.vectorRaster.Line o-- adapter.examples.vectorRaster.Point : start
  adapter.examples.vectorRaster.LineToPointAdapter -up-|> java.util.ArrayList
  adapter.examples.vectorRaster.VectorObject -up-|> java.util.ArrayList
  adapter.examples.vectorRaster.VectorRectangle -up-|> adapter.examples.vectorRaster.VectorObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
